--- a/index.html
+++ b/index.html
@@ -9,9 +9,49 @@
 </head>
 <body>
 
-<input type='text' id='name' onfocus='onFocus(this)' value="Aardsma"/>
-<button>Get JSON data</button>
-<div id="output"></div>
+Enter Player's Last Name <br>
+<input type='text' id='name' onclick="nameChange()" value="Enter Last Name Here">
+<button>Submit</button>
+<div id="output">
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Year</th>
+            <th>Team</th>
+            <th>ERA</th>
+            <th>W</th>
+            <th>L</th>
+            <th>Opp BA</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+</div>
 
 
 </body>
