--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Enter Player's Last Name <br>
+<label for="name"> Enter Player's Last Name </label><br>
 <input type='text' id='name' onclick="nameChange()" value="Enter Last Name Here">
 <button>Submit</button>
 <div id="output">
