Albinson - Fixed batting.json file.  Had bad data at end of file.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <input type='text' id='name' onclick="nameChange()" value="Enter Last Name Here">
 <button>Submit</button>
 <div id="output">
-    <table>
+    <table border="1" cellspacing="4" cellpadding="3" id="pitch">
         <tr>
-            <th>Name</th>
             <th>Year</th>
             <th>Team</th>
             <th>ERA</th>
@@ -23,32 +22,15 @@
             <th>L</th>
             <th>Opp BA</th>
         </tr>
+    </table>
+    <table border="1" cellspacing="4" cellpadding="3" id="bat">
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <th>Year</th>
+            <th>Team</th>
+            <th>G</th>
+            <th>H</th>
+            <th>AB</th>
+            <th>BA</th>
         </tr>
     </table>
 </div>
