Start of autocomplete

--- a/index.html
+++ b/index.html
@@ -14,28 +14,31 @@
 <label for="name"></label><br>
 <input type='text' id='name' placeholder="Enter Last Name Here">
 <button id="submit" class="btn btn-primary">Submit</button>
+<div id="nameOutput">
+
+</div>
 <div id="output">
     <table class="table table-hover" id="pitch">
-        <tr>
-            <th>Year</th>
-            <th>Team</th>
-            <th>ERA</th>
-            <th>W</th>
-            <th>L</th>
-            <th>Opp BA</th>
-        </tr>
+    <tr>
+        <th>Year</th>
+        <th>Team</th>
+        <th>ERA</th>
+        <th>W</th>
+        <th>L</th>
+        <th>Opp BA</th>
+    </tr>
     </table>
     <table class="table table-hover" id="bat">
-        <tr>
-            <th>Year</th>
-            <th>Team</th>
-            <th>G</th>
-            <th>R</th>
-            <th>H</th>
-            <th>AB</th>
-            <th>HR</th>
-            <th>BA</th>
-        </tr>
+    <tr>
+        <th>Year</th>
+        <th>Team</th>
+        <th>G</th>
+        <th>R</th>
+        <th>H</th>
+        <th>AB</th>
+        <th>HR</th>
+        <th>BA</th>
+    </tr>
     </table>
 </div>
 
