--- a/index.html
+++ b/index.html
@@ -20,89 +20,143 @@
 
 </div>
 
-<button id="submit" class="btn btn-primary">Submit</button><button id="filter" class="btn btn-info">Filter</button>
-<div id="statInput">
+<button id="submit" class="btn btn-primary">Submit</button><button id="pitcherFilter" class="btn btn-info">Pitcher Stats</button><button id="batterFilter" class="btn btn-warning">Batter Stats</button>
+<div id="pitcherStats">
     <div class="btn-group" data-toggle="buttons">
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> W
+            <input id="W" type="checkbox" autocomplete="off" checked> W
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> L
+            <input id="L" type="checkbox" autocomplete="off" checked> L
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> ERA
+            <input id="ERA" type="checkbox" autocomplete="off" checked> ERA
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> SO
+            <input id="SO" type="checkbox" autocomplete="off" checked> SO
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> BAOpp
+            <input id="BAOpp" type="checkbox" autocomplete="off" checked> BAOpp
         </label>
         <label class="btn btn-primary active">
-            <input type="checkbox" autocomplete="off" checked> SO
+            <input id="G" type="checkbox" autocomplete="off" checked> G
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> G
+            <input id="HR" type="checkbox" autocomplete="off" > HR
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off" > GS
+            <input id="GS" type="checkbox" autocomplete="off" > GS
         </label>
         <br>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> CG
+            <input id="CG" type="checkbox" autocomplete="off"> CG
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> SHO
+            <input id="SHO" type="checkbox" autocomplete="off"> SHO
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off" > SV
+            <input id="SV" type="checkbox" autocomplete="off" > SV
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> IPouts
+            <input id="IPOuts" type="checkbox" autocomplete="off"> IPOuts
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> H
+            <input id="H" type="checkbox" autocomplete="off"> H
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> ER
+            <input id="ER" type="checkbox" autocomplete="off"> ER
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> BB
+            <input id="BB" type="checkbox" autocomplete="off"> BB
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> IBB
+            <input id="IBB" type="checkbox" autocomplete="off"> IBB
         </label>
         <br>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> WP
+            <input id="WP" type="checkbox" autocomplete="off"> WP
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> HBP
+            <input id="HBP" type="checkbox" autocomplete="off"> HBP
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> BK
+            <input id="BK" type="checkbox" autocomplete="off"> BK
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> BFP
+            <input id="BFP" type="checkbox" autocomplete="off"> BFP
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> GF
+            <input id="GF" type="checkbox" autocomplete="off"> GF
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> R
+            <input id="R" type="checkbox" autocomplete="off"> R
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> SH
+            <input id="SH" type="checkbox" autocomplete="off"> SH
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> SF
+            <input id="SF" type="checkbox" autocomplete="off"> SF
         </label>
         <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> GIDP
+            <input id="GIDP" type="checkbox" autocomplete="off"> GIDP
         </label>
     </div>
-    <div>
-
+</div>
+<div id="batterStats">
+    <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-primary active">
+            <input id="Gb" type="checkbox" autocomplete="off" checked> G
+        </label>
+        <label class="btn btn-primary active">
+            <input id="ABb" type="checkbox" autocomplete="off" checked> AB
+        </label>
+        <label class="btn btn-primary active">
+            <input id="Rb" type="checkbox" autocomplete="off" checked> R
+        </label>
+        <label class="btn btn-primary active">
+            <input id="Hb" type="checkbox" autocomplete="off" checked> H
+        </label>
+        <label class="btn btn-primary active">
+            <input id="2Bb" type="checkbox" autocomplete="off" checked> 2B
+        </label>
+        <label class="btn btn-primary active">
+            <input id="3Bb" type="checkbox" autocomplete="off" checked> 3B
+        </label>
+        <label class="btn btn-primary">
+            <input id="HRb" type="checkbox" autocomplete="off" > HR
+        </label>
+        <label class="btn btn-primary">
+            <input id="RBIb" type="checkbox" autocomplete="off" > RBI
+        </label>
+        <br>
+        <label class="btn btn-primary">
+            <input id="SBb" type="checkbox" autocomplete="off"> SB
+        </label>
+        <label class="btn btn-primary">
+            <input id="CSb" type="checkbox" autocomplete="off"> CS
+        </label>
+        <label class="btn btn-primary">
+            <input id="BBb" type="checkbox" autocomplete="off" > BB
+        </label>
+        <label class="btn btn-primary">
+            <input id="SOb" type="checkbox" autocomplete="off"> SO
+        </label>
+        <label class="btn btn-primary">
+            <input id="IBPb" type="checkbox" autocomplete="off"> IBP
+        </label>
+        <label class="btn btn-primary">
+            <input id="HBPb" type="checkbox" autocomplete="off"> HBP
+        </label>
+        <label class="btn btn-primary">
+            <input id="SFb" type="checkbox" autocomplete="off"> SF
+        </label>
+        <label class="btn btn-primary">
+            <input id="SHb" type="checkbox" autocomplete="off"> SH
+        </label>
+        <br>
+        <label class="btn btn-primary">
+            <input id="GIDPb" type="checkbox" autocomplete="off"> GIDP
+        </label>
     </div>
 </div>
 <div id="output">
