Finished with loading

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
 
 
 <div id="output">
+    <div id="nameSpace"></div>
 
     <table class="table table-hover" id="pitch">
     </table>
     <table class="table table-hover" id="bat">
     </table>
     <div id="yellow" class="key">Top 10%</div><div id="orange" class="key">Top 5%</div><div id="red" class="key">MLB Best</div>
+    <div class='loader'></div>
 </div>
 
 
